[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sslab-txz"
version = "2024.1.5"
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "openfermion",
  "tqdm",
  "scikit-image",
  "scikit-rf",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"
